# _assigment_noc_

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  health.py  intents.py  me.py  query.py
backend/app/auth/: __init__.py  jwt_handler.py  middleware.py  roles.py  schemas.py
backend/app/db/: models.py  seed.py  session.py
backend/app/llm/: __init__.py  client.py  intent_extractor.py  prompts.py  response_formatter.py
backend/app/monitoring/: telemetry.py
backend/app/query/: cache.py  executor.py  formatter.py  intent_validator.py  orchestrator.py  response_templates.py  sql_builder.py  sql_templates.py
backend/app/security/: blocked_patterns.py  prompt_guard.py  protection.py
backend/tests/: __init__.py  test_intent_validation.py  test_query_api.py  test_sql_builder.py
backend/tests/fixtures/: intents.json
doc/: db_schema.md  executing_flow.md  implementation_plan.md  workflow.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AssistantMessage.jsx  ChatContainer.jsx  ChatInput.jsx  DataTable.jsx  EmptyState.jsx  Header.jsx  MessageList.jsx  ProtectedRoute.jsx  SuggestedQueries.jsx  TimingBadge.jsx  TypingIndicator.jsx  (+1 more)
nginx/: nginx.conf
scripts/: seed_db.py  test_intents.py
(+4 files in other folders)
