[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-ai-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Network AI Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "google-generativeai>=0.7",
    "python-jose[cryptography]>=3.3",
    "tenacity>=8.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23"
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
